Validando dados do usuário e setando o emailNutricionista como INVISIBLE quando o swicth eNutricionista for habilitado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="oops_title">Oops!</string>
     <string name="HistoricoFamiliar"><u>Histórico de doenças familiares</u></string>
     <string name="FatoresUsuario"><u>Suas Informacoes</u></string>
+    <string name="dados_invalidos">Existem campos que não foram preenchidos</string>
 
     <string-array name="sexo_array">
         <item>Masculino</item>
