Validando peso (unico campo que pode vir vazio)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="HistoricoFamiliar"><u>Histórico de doenças familiares</u></string>
     <string name="FatoresUsuario"><u>Suas Informacoes</u></string>
     <string name="dados_invalidos">Existem campos que não foram preenchidos</string>
+    <string name="peso_invalido">Informe o seu peso</string>
 
     <string-array name="sexo_array">
         <item>Masculino</item>
