--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="peso_invalido">Informe o seu peso</string>
     <string name="hintAlimento">Alimento</string>
     <string name="hintQuantidade">Quantidade</string>
+    <string name="hintPeriodicidade">Periodicidade</string>
 
     <string name="descricaoPratica"><b>%1$s</b></string>
 
